优化跨章节线索生命周期